fixed spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,7 @@
     --bs-body-font-family: var(--bs-font-sans-serif);
     --bs-body-font-size: 1rem;
     --bs-body-font-weight: 400;
+    --body-margin: 15%;
 
     /* colours */
     --body-font-color: #fbdbdb;
@@ -32,41 +33,33 @@ body {
 	background: var(--body-background-colour)
 }
 
-/* Navbar */
-.home-button{
-	display:inline-block;
 
-	padding: 14px 20px;
-	width: 25px;
-}
+/* Navbar */
 .navbar{
-    float: right;
+    display: flex;
+    justify-content: space-between;
+    padding-top: 2%;
+    margin: 0 var(--body-margin);
 
     font-family: var(--bs-body-font-family);
     font-weight: bold;
-
-	list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-}
-.navbar li{
-    float: left;
 }
 .navbar a{
-    display: block;
-    color: rgb(0, 0, 0);
-    text-align: center;
-    padding: 14px 20px;
+    color: black;
+    margin-left: 3%;
     text-decoration: none;
 }
-.navbar li a:hover{
+.navbar a:hover{
     color: var(--body-highlight-color);
+}
+.home-button{
+    /* width of pixel */
+	width: 25px; 
 }
 
 
 /* need this container for background to extend to navbar */
-.background-container{
+.background{
 	background: radial-gradient(
         circle at top, 
         #fff4f0, 
@@ -84,6 +77,7 @@ body {
 /* Main Title */
 .main-page{
 	height: 100vh;
+    width: 100%;
 
 	display: flex;
     flex-direction: column;
@@ -139,47 +133,49 @@ hr{
 
 
 /* Footer */
+.footer-background{
+    background: linear-gradient(to bottom, 
+        var(--body-background-colour),
+        var(--footer-backgruond-colour) 67px);
+}
 .footer{
 	display: inline-block;
-	padding: 20px;
-	background: linear-gradient(to bottom, 
-				var(--body-background-colour),
-				var(--footer-backgruond-colour) 25%);
+    margin: 20px var(--body-margin);
 }
 .footer-column-1{
-	width: 40%; 
+	width: 50%; 
+    height: 20%;
     float: left; 
     margin-right: 20px; 
+    color: black;
 }
 .footer-column-1 h3{
 	color: var(--footer-header-colour);
 	font-size: 17px;
 }
 .footer-column-1 p{
-	color: #000;
-
 	font-size: 23px;
 	font-weight: bold;
 }
-.footer-column{
+.footer-column-2{
 	width: 20%; 
     float: right; 
-    margin-right: 20px; 
+    text-align: right;
+    margin-left: 20px; 
+    color: black;
 }
-.footer-column h3{
+.footer-column-2 h3{
 	color: var(--footer-header-colour);
 	font-size: 17px;
 }
-.footer-column p{
-	color: #000;
-
-	font-size: 23px;
+.footer-column-2 p{
+	font-size: 19px;
 	font-weight: bold;
 }
-.footer-column a{
+.footer-column-2 a{
 	color: #001eff;
 }
-.footer-column a:visited{
+.footer-column-2 a:visited{
 	color: #6c00e7;
 }
 
